--- a/package.json
+++ b/package.json
@@ -29,26 +29,32 @@
     "configuration": {
       "title": "Better Open Editors",
       "properties": {
-        "betterOpenEditors.InsertSpacesAroundSlashes": {
+        "betterOpenEditors.InsertSpaceForLastSlug": {
           "order": 1,
           "type": "boolean",
           "default": false,
-          "description": "Insert spaces around path slashes to improve the readability."
+          "description": "Insert space before the last slug to improve the readability."
+        },
+        "betterOpenEditors.InsertSpacesAroundSlashes": {
+          "order": 2,
+          "type": "boolean",
+          "default": false,
+          "description": "Insert spaces around all path slashes to improve the readability."
         },
         "betterOpenEditors.ShowWorkspaceIcon": {
-          "order": 2,
+          "order": 3,
           "type": "boolean",
           "default": false,
           "description": "Shows a Workspace Icon in front of workspace folders."
         },
         "betterOpenEditors.ShowPackageIcon": {
-          "order": 3,
+          "order": 4,
           "type": "boolean",
           "default": false,
           "description": "Shows a Package Icon in front of packages."
         },
         "betterOpenEditors.PackagePatterns": {
-          "order": 4,
+          "order": 5,
           "type": "string",
           "editPresentation": "multilineText",
           "default": "**/components/*\n**/modules/*",
