fix: Empty documents do not longer open additional empty documents on click (fixes #6)

--- a/package.json
+++ b/package.json
@@ -92,6 +92,10 @@
         "command": "betterOpenEditors.openExtensionSettings",
         "title": "Open settings",
         "icon": "$(settings-gear)"
+      },
+      {
+        "command": "betterOpenEditors.showTab",
+        "title": "Show Tab"
       }
     ],
     "menus": {
