--- a/package.json
+++ b/package.json
@@ -96,6 +96,28 @@
       {
         "command": "betterOpenEditors.showTab",
         "title": "Show Tab"
+      },
+      {
+        "command": "betterOpenEditors.closeTab",
+        "title": "Close",
+        "icon": "$(close)"
+      },
+      {
+        "command": "betterOpenEditors.openInIntegratedTerminal",
+        "title": "Open in Integrated Terminal",
+        "icon": "$(terminal)"
+      },
+      {
+        "command": "betterOpenEditors.copyPath",
+        "title": "Copy Path"
+      },
+      {
+        "command": "betterOpenEditors.copyRelativeFilePath",
+        "title": "Copy Relative Path"
+      },
+      {
+        "command": "betterOpenEditors.revealFileInOS",
+        "title": "Reveal in File Explorer"
       }
     ],
     "menus": {
@@ -109,6 +131,65 @@
           "command": "betterOpenEditors.openExtensionSettings",
           "when": "view == betterOpenEditors",
           "group": "navigation"
+        }
+      ],
+      "view/item/context": [
+        {
+          "command": "betterOpenEditors.closeTab",
+          "group": "inline",
+          "when": "view == betterOpenEditors && viewItem == file"
+        },
+        {
+          "command": "betterOpenEditors.openInIntegratedTerminal",
+          "group": "inline",
+          "when": "view == betterOpenEditors && viewItem == workspace"
+        },
+        {
+          "command": "betterOpenEditors.openInIntegratedTerminal",
+          "group": "inline",
+          "when": "view == betterOpenEditors && viewItem == folder"
+        },
+        {
+          "command": "betterOpenEditors.openInIntegratedTerminal",
+          "when": "view == betterOpenEditors && viewItem == workspace"
+        },
+        {
+          "command": "betterOpenEditors.openInIntegratedTerminal",
+          "when": "view == betterOpenEditors && viewItem == folder"
+        },
+        {
+          "command": "betterOpenEditors.closeTab",
+          "when": "view == betterOpenEditors && viewItem == file"
+        },
+        {
+          "command": "betterOpenEditors.copyPath",
+          "group": "copypath",
+          "when": "view == betterOpenEditors && viewItem == file"
+        },
+        {
+          "command": "betterOpenEditors.copyPath",
+          "group": "copypath",
+          "when": "view == betterOpenEditors && viewItem == folder"
+        },
+        {
+          "command": "betterOpenEditors.copyPath",
+          "group": "copypath",
+          "when": "view == betterOpenEditors && viewItem == workspace"
+        },
+        {
+          "command": "betterOpenEditors.revealFileInOS",
+          "group": "copypath",
+          "when": "view == betterOpenEditors && viewItem == file"
+        },
+        {
+          "command": "betterOpenEditors.revealFileInOS",
+          "group": "copypath",
+          "when": "view == betterOpenEditors && viewItem == folder"
+        },
+        {
+          "command": "betterOpenEditors.revealFileInOS",
+          "group": "copypath",
+          "when": "view == betterOpenEditors && viewItem == workspace"
         }
       ]
     }
