--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "Other"
   ],
   "activationEvents": [
-    "onStartupFinished"
+    "onView:betterOpenEditors"
   ],
   "main": "./src/extension.js",
   "contributes": {
