--- a/package.json
+++ b/package.json
@@ -66,8 +66,14 @@
           "default": true,
           "description": "Shows name and version if there is a package file."
         },
-        "betterOpenEditors.SkipWorkspacesIfNotNeeded": {
+        "betterOpenEditors.HidePackagePath": {
           "order": 7,
+          "type": "boolean",
+          "default": false,
+          "description": "Hides the path of a package if a package name is available."
+        },
+        "betterOpenEditors.SkipWorkspacesIfNotNeeded": {
+          "order": 8,
           "type": "boolean",
           "default": true,
           "description": "Skips the workspace tree level if you have only one folder opened. But it could be useful to disable this setting if you want to see the package info for the workspace folder."
