feature: Add pin functionality (fixes #9)

--- a/package.json
+++ b/package.json
@@ -129,7 +129,15 @@
       {
         "command": "betterOpenEditors.revealFileInOS",
         "title": "Reveal in file explorer"
-      }
+      },
+      {
+        "command": "betterOpenEditors.pinTab",
+        "title": "Pin tab"
+      },
+      {
+        "command": "betterOpenEditors.unpinTab",
+        "title": "Unpin tab"
+      }      
     ],
     "menus": {
       "view/title": [
@@ -148,7 +156,7 @@
         {
           "command": "betterOpenEditors.closeTab",
           "group": "inline",
-          "when": "view == betterOpenEditors && viewItem == file"
+          "when": "view == betterOpenEditors && viewItem in betterOpenEditors.fileLikeItems"
         },
         {
           "command": "betterOpenEditors.openInIntegratedTerminal",
@@ -172,7 +180,7 @@
         },
         {
           "command": "betterOpenEditors.closeTab",
-          "when": "view == betterOpenEditors && viewItem == file"
+          "when": "view == betterOpenEditors && viewItem in betterOpenEditors.fileLikeItems"
         },
         {
           "command": "betterOpenEditors.closeFolder",
@@ -181,7 +189,7 @@
         {
           "command": "betterOpenEditors.copyPath",
           "group": "copypath",
-          "when": "view == betterOpenEditors && viewItem == file"
+          "when": "view == betterOpenEditors && viewItem in betterOpenEditors.fileLikeItems"
         },
         {
           "command": "betterOpenEditors.copyPath",
@@ -196,7 +204,7 @@
         {
           "command": "betterOpenEditors.copyRelativePath",
           "group": "copypath",
-          "when": "view == betterOpenEditors && viewItem == file"
+          "when": "view == betterOpenEditors && viewItem in betterOpenEditors.fileLikeItems"
         },
         {
           "command": "betterOpenEditors.copyRelativePath",
@@ -206,7 +214,7 @@
         {
           "command": "betterOpenEditors.revealFileInOS",
           "group": "special",
-          "when": "view == betterOpenEditors && viewItem == file"
+          "when": "view == betterOpenEditors && viewItem in betterOpenEditors.fileLikeItems"
         },
         {
           "command": "betterOpenEditors.revealFileInOS",
@@ -217,6 +225,16 @@
           "command": "betterOpenEditors.revealFileInOS",
           "group": "special",
           "when": "view == betterOpenEditors && viewItem == workspace"
+        },
+        {
+          "command": "betterOpenEditors.pinTab",
+          "group": "specialPin",
+          "when": "view == betterOpenEditors && viewItem == fileCurrent"
+        },
+        {
+          "command": "betterOpenEditors.unpinTab",
+          "group": "specialPin",
+          "when": "view == betterOpenEditors && viewItem == fileCurrentPinned"
         }
       ]
     }
